# fantasypl

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  LICENSE  MIGRATION.md  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
api/SUMMARY/: index.html
api/fplx/: index.html
api/fplx/api/: index.html
api/fplx/api/interface/: index.html
api/fplx/core/: index.html
api/fplx/core/matchweek/: index.html
api/fplx/core/player/: index.html
api/fplx/core/squad/: index.html
api/fplx/data/: index.html
api/fplx/data/double_gameweek/: index.html
api/fplx/data/loaders/: index.html
api/fplx/data/news_collector/: index.html
api/fplx/data/schemas/: index.html
api/fplx/data/tft_dataset/: index.html
api/fplx/data/vaastav_loader/: index.html
api/fplx/evaluation/: index.html
api/fplx/evaluation/metrics/: index.html
api/fplx/inference/: index.html
api/fplx/inference/enriched/: index.html
api/fplx/inference/fusion/: index.html
api/fplx/inference/hmm/: index.html
api/fplx/inference/kalman/: index.html
api/fplx/inference/multivariate_hmm/: index.html
api/fplx/inference/pipeline/: index.html
api/fplx/inference/tft/: index.html
api/fplx/models/: index.html
api/fplx/models/base/: index.html
api/fplx/models/baseline/: index.html
api/fplx/models/ensemble/: index.html
api/fplx/models/regression/: index.html
api/fplx/models/rolling_cv/: index.html
api/fplx/selection/: index.html
api/fplx/selection/base/: index.html
api/fplx/selection/constraints/: index.html
api/fplx/selection/lagrangian/: index.html
api/fplx/selection/optimizer/: index.html
api/fplx/signals/: index.html
api/fplx/signals/base/: index.html
api/fplx/signals/fixtures/: index.html
api/fplx/signals/news/: index.html
api/fplx/signals/stats/: index.html
api/fplx/timeseries/: index.html
api/fplx/timeseries/features/: index.html
api/fplx/timeseries/transforms/: index.html
api/fplx/utils/: index.html
api/fplx/utils/config/: index.html
api/fplx/utils/validation/: index.html
architecture/: index.html
config/: fplx.config.json
docs/: architecture.md  examples.md  gen_ref_pages.py  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: index.md  inference-pipeline.md
docs/inference/: double_gameweek.md  hmm.md  index.md  kalman.md  news-signals.md  pipeline.md
docs/optimization/: duality.md  experiments.md  index.md  squad-ilp.md
examples/: advanced_optimization.py  basic_usage.py  index.html  ml_models.py  toy_inference.py
fantasypl/: __init__.py  parse_data.py  search.py
fpl/: __init__.py
fpl/data_loader/: __init__.py  data_download.py
fpl/data_loader/data/: fpl_data.csv  fpl_data.json  fpl_generic_data.json  generic_events.csv  generic_game_settings.csv  generic_players.csv  generic_players_types.csv
fpl/data_loading/data/: generic_phases.csv  generic_players_stats.csv  generic_teams.csv
fplx/: __init__.py
fplx/api/: __init__.py  interface.py
fplx/core/: __init__.py  matchweek.py  player.py  squad.py
fplx/data/: __init__.py  double_gameweek.py  loaders.py  news_collector.py  schemas.py  tft_dataset.py  vaastav_loader.py
fplx/evaluation/: __init__.py  metrics.py
fplx/inference/: __init__.py  enriched.py  fusion.py  hmm.py  kalman.py  multivariate_hmm.py  pipeline.py  tft.py
fplx/models/: __init__.py  base.py  baseline.py  ensemble.py  regression.py  rolling_cv.py
fplx/selection/: __init__.py  base.py  constraints.py  lagrangian.py  optimizer.py
fplx/signals/: __init__.py  base.py  fixtures.py  news.py  stats.py
fplx/tests/: test_batch_inference.py  test_news_inference.py  test_play_inf_viz.py  test_prob_inf.py
fplx/timeseries/: __init__.py  features.py  transforms.py
fplx/utils/: __init__.py  config.py  validation.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
inference/: index.html
inference/double_gameweek/: index.html
inference/hmm/: index.html
inference/kalman/: index.html
inference/news-signals/: index.html
inference/pipeline/: index.html
optimization/: index.html
optimization/duality/: index.html
optimization/experiments/: index.html
optimization/squad-ilp/: index.html
scripts/: backtest_season.py  fetch_live_season.py  gen_plots.py  train_tft.py
search/: search_index.json
tests/: test_batch_inference.py  test_fpl_news_api.py  test_news_inference.py  test_play_inf_viz.py  test_prob_inf.py
