[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fplx"
version = "0.2.0"
description = "Fantasy Premier League Time-Series Analysis & Squad Optimization"
readme = "README.md"
authors = [
    {name = "Felix Hirwa Nshuti", email = "hirwanshutiflx@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["fantasy", "premier-league", "fpl", "time-series", "optimization", "machine-learning"]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "requests>=2.26.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]
optimization = [
    "pulp>=2.6.0",
]
deep = [
    "torch>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]
all = [
    "fplx[ml,optimization,deep,dev]",
]

[project.urls]
Homepage = "https://github.com/fnhirwa/fantasypl"
Repository = "https://github.com/fnhirwa/fantasypl"
Documentation = "https://github.com/fnhirwa/fantasypl#readme"
"Bug Tracker" = "https://github.com/fnhirwa/fantasypl/issues"

[tool.setuptools.packages.find]
include = ["fplx*"]
exclude = ["tests*", "fantasypl*", "build*", "env*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=fplx --cov-report=html --cov-report=term"
