[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fplx"
version = "0.2.0"
description = "Fantasy Premier League Time-Series Analysis & Squad Optimization"
readme = "README.md"
authors = [
    {name = "Felix Hirwa Nshuti", email = "hirwanshutiflx@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["fantasy", "premier-league", "fpl", "time-series", "optimization", "machine-learning"]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "requests>=2.26.0",
    "pydantic>=1.8.0",
    "scipy>=1.7.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]
optimization = [
    "pulp>=2.6.0",
]
deep = [
    "torch>=1.10.0",
]
dev = [
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "black",
    "mypy",
    "flake8",
    "pre-commit"
]
all = [
    "fplx[ml,optimization,deep,dev]",
]

[project.urls]
Homepage = "https://github.com/fnhirwa/fantasypl"
Repository = "https://github.com/fnhirwa/fantasypl"
Documentation = "https://github.com/fnhirwa/fantasypl#readme"
"Bug Tracker" = "https://github.com/fnhirwa/fantasypl/issues"

[tool.setuptools.packages.find]
include = ["fplx*"]
exclude = ["tests*", "fantasypl*", "build*", "env*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=fplx --cov-report=html --cov-report=term"


[tool.ruff]
line-length = 110
target-version = "py39"
exclude = [".git", "docs"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    # https://pypi.org/project/pycodestyle
    "E",
    "W",
    "D",
    # https://pypi.org/project/pyflakes
    "F",
    # https://pypi.org/project/flake8-bandit
    "S",
    # https://docs.astral.sh/ruff/rules/assignment-in-assert
    "RUF018",
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP",
    "I002",    # Missing required imports
    "UP008",   # Super calls with redundant arguments passed.
    "G010",    # Deprecated log warn.
    "PLR1722", # Use sys.exit() instead of exit() and quit().
    "TRY004",  # Prefer TypeError exception for invalid type.
    "PT014",   # pytest-duplicate-parametrize-test-cases.
    "PT006",   # Checks for the type of parameter names passed to pytest.mark.parametrize.
    "PT007",   # Checks for the type of parameter values passed to pytest.mark.parametrize.
    "PT018",   # Checks for assertions that combine multiple independent conditions.
]

extend-select = [
    "I",      # isort
    "C4",     # https://pypi.org/project/flake8-comprehensions
    "SIM",    # https://pypi.org/project/flake8-simplify
    "RET",    # https://pypi.org/project/flake8-return
    "PT",     # https://pypi.org/project/flake8-pytest-style
]

ignore = [
    "S101",  # Use of `assert` detected
    "E203", # Whitespace-before-punctuation.
    "E402", # Module-import-not-at-top-of-file.
    "E731", # Do not assign a lambda expression, use a def.
    "D100", # Missing docstring in public module.
    "D101", # Missing docstring in public class.
    "D102", # Missing docstring in public method.
    "D103", # Missing docstring in public function.
    "D104", # Missing docstring in public package.
    "D105", # Missing docstring in magic method.
    "D106", # Missing docstring in public nested class.
    "D107", # Missing docstring in `__init__`.
    "S108",
    "D203", # 1 blank line required before class docstring.
    "D205", # 1 blank line required between summary line and description.
    "D212", # Multi-line docstring summary should start at the first line.
    "D213", # Multi-line docstring summary should start at the second line.
    "D209", # Multi-line docstring closing quotes should be on a separate line.
    "D400", # First line should end with a period.
    "D413", # Missing blank line after last section of docstrings.
    "D401", # First line of docstring should be in imperative mood.
    "D415", # First line should end with a period, question mark, or exclamation point.
    "D416", # Section name should end with a colon ("Attributes").
    "D417", # Missing argument description in the docstring for argument "X".
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["S101"]
"**/__init__.py" = ["F401", "F403", "F405", "F811", "F821", "E501", "SIM102"]
"tests/**" = [
    "S605",  # Starting a process with a shell: seems safe, but may be changed in the future; consider rewriting without `shell`
    "S607",  # Starting a process with a partial executable path
    "RET504",  # todo:Unnecessary variable assignment before `return` statement
    "PT004",  # Fixture `tmpdir_unittest_fixture` does not return anything, add leading underscore
    "PT011",  # `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "PT019",  # Fixture `_` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
    "PT006" # Checks for the type of parameter names passed to pytest.mark.parametrize.
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 18

[tool.blackdoc]
